libs/override_key_core/tests/errors/missing_infer_keyword.stderr
error: missing `infer` keyword — expected #[override_key(infer[, prefix = "..."])]
 --> tests/errors/missing_infer_keyword.rs:6:5
  |
6 |     #[override_key(prefix = "iproyal")]
  |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
